tdf#168858: drop workaround for hidden last section

Commit bb6bd1ff9cd3eecec7eb2cd7bd0a4dcef584c903 (fdo#53210 SwDoc::UpdateExpFlds
don't crash when hiding all sections, 2012-08-10) added an exception for a case
where the last section was hidden, leaving no content on a page. That happened
because hidden sections, unlike e.g. hidden paragraphs, didn't generate frames
for layout. The workaround set the section's condition to "0", which prevented
it from hiding. It wasn't robust: the problem could happen for nested sections,
where the outer section was hidden, so the inner section got hidden even with
its condition set like that. Also, the workaround could apply to sections that
ended up not the only content on the page (maybe that happened at a moment when
layout hadn't finished yet).

Commit 0c96119895b347f8eb5bb89f393351bd3c02b9f1 (tdf#159565 prerequisite: make
hidden sections have zero-height frames, 2024-02-14) changed how sections are
hidden, to follow what paragraphs do: they now create zero-height frames. That
made the workaround unnecessary.

This change reverts commit bb6bd1ff9cd3eecec7eb2cd7bd0a4dcef584c903.

There is a (pre-existing) problem, that documents having only hidden content,
like tdf168858_nested_hidden_section.fodt, open in read-only mode. It should
be fixed in a separate change.

Change-Id: Iac653baef0d17a2e7ec4e75acbf915f281daa9ed
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/192902
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>